--- a/2.html
+++ b/2.html
@@ -2,25 +2,39 @@
 <html>
 <meta charset="utf-8">
 <head>
-<title>WEB1 - CSS</title>
+<title>ツインターボ</title>
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">
+  <img src="https://spice.eplus.jp/images/i6tVDWthnvtT3TLscqUVdUk7nB0cMENefD9rYSXgjiUOMVFGh4J9O6NkP2iumCsg/"width="180">
+  </a></h1>
 <ol>
- <li><a href="1.html">HTML<br></a></li>
- <li><a href="2.html">CSS<br></a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">オグリキャップ<br></a></li>
+ <li><a href="2.html">ツインターボ<br></a></li>
+ <li><a href="3.html">サクラバクシンオー</a></li>
 </ol>
 <style> ol {
   color: skyblue;
 }
 </style>
+<h2 style="color:blue;">ツインターボ</h2>
 <p>
-<h2 style="color:orange;">CSS</h2>
-Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+<img src="https://gamewith.akamaized.net/article_tools/uma-musume/gacha/character_image_main_65_a.png"width="15%" style="float:left;">
+<strong>ターボは最初から全力がいい！ずっと一番が気持ちいいもん！</strong><br><br> 
+CV:花井美春<br>
+ツインターボとは、『ウマ娘 プリティーダービー』の登場キャラクターである。
 <br>
-CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts. This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.
-<img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg"width="40%">
+実在した競走馬、ツインターボ号をモチーフとするウマ娘である。
+<br>
+<br>
+暴走！爆走！いつでも走り回っている全力少女。<br>
+自分の限界を知らないため、ギリギリまで追い込んでしまう……のだが、極限状態を楽しんでいるフシもある。<br>
+同世代に比べ幼い性格で、臆面なく人に感情を伝えられる、よく言えば素直、悪く言えばワガママだけど憎めないムラッ気ウマ娘。<br>
+<a href="https://umamusume.jp/character/detail/?name=twinturbo" target="_blank" title="キャラクター一覧 | ウマ娘 プリティーダービー 公式ポータルサイト｜Cygames">公式ポータルサイトumamusume.jp</a>より<br>
+アニメSEASON2の放送開始に合わせ、2020年12月に実装が決まった。なおゲームでも反映されているが元ネタでの渾名、そしてアニメでの活躍の結果トレーナーからは「師匠」と呼ばれたりすることも。<br>
+実はこう見えて意外と臆病だったりする。元ネタの競走馬ツインターボも後ろから走ってくる馬が怖くて必死に走ってた話がある為、それに由来するのだろう。<br>
+後はムーンウォークが得意との事。<br>
+エアシャカール、シンコウウインディ同様のウマ娘ギザ歯勢の一人。
 </p>
 </body>
 </html>
