--- a/index.html
+++ b/index.html
@@ -2,23 +2,30 @@
 <html>
 <meta charset="utf-8">
 <head>
-<title>WEB1 - Welcome</title>
+<title>ウマ娘ファンページ</title>
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+<h1><a href="index.html">
+<img src="https://spice.eplus.jp/images/i6tVDWthnvtT3TLscqUVdUk7nB0cMENefD9rYSXgjiUOMVFGh4J9O6NkP2iumCsg/"width="180">
+</a></h1>
+<font size="+1">
 <ol>
- <li><a href="1.html">HTML<br></a></li>
- <li><a href="2.html">CSS<br></a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">オグリキャップ<br></a></li>
+ <li><a href="2.html">ツインターボ<br></a></li>
+ <li><a href="3.html">サクラバクシンオー</a></li>
 </ol>
+</font>
 <style> ol {
   color: skyblue;
 }
 </style>
-<h2 style="color:purple;">WEB</h2>
+<font size="+2">
+<h2 style="color:pink;">ウマ娘 プリティーダービー</h2>
+</font>
+<img src="https://umamusume.jp/_nuxt/images/kv-5c23afc.jpg"width="600" style="float:top">
+<iframe width="840" height="472.5" src="https://www.youtube.com/embed/dZTR9esWBmk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="float:top"></iframe>
 <p>
-The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources are identified by Uniform Resource Locators (URLs, such as https://example.com/), which may be interlinked by hyperlinks, and are accessible over the Internet. The resources of the Web are transferred via the Hypertext Transfer Protocol (HTTP), may be accessed by users by a software application called a web browser, and are published by a software application called a web server. The World Wide Web is not synonymous with the Internet, which pre-dated the Web in some form by over two decades and upon which technologies the Web is built.
+『ウマ娘 プリティーダービー』（ウマむすめ プリティーダービー）は、<a href="https://www.cygames.co.jp/" target="_blank" title="Cygamesの公式ホームページ">Cygames</a>によるスマートフォン向けゲームアプリとPCゲーム、およびそれを中心としたメディアミックスコンテンツ。略称は『ウマ娘』。ジャンルは育成シミュレーションゲームで、競走馬を萌え擬人化したキャラクターである「ウマ娘」を育成し、「トゥインクル・シリーズ」と呼ばれるレースでの勝利を目指すという内容。
 </p>
-<img src="https://media.vlpt.us/images/sui3422/post/885b433d-55fa-48af-9155-e3963e28c467/www.jpeg"width="1000">
 </body>
 </html>
