--- a/1.html
+++ b/1.html
@@ -2,25 +2,38 @@
 <html>
 <meta charset="utf-8">
 <head>
-<title>WEB1 - HTML</title>
+<title>オグリキャップ</title>
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">
+  <img src="https://spice.eplus.jp/images/i6tVDWthnvtT3TLscqUVdUk7nB0cMENefD9rYSXgjiUOMVFGh4J9O6NkP2iumCsg/"width="180">
+  </a></h1>
 <ol>
- <li><a href="1.html">HTML<br></a></li>
- <li><a href="2.html">CSS<br></a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">オグリキャップ<br></a></li>
+ <li><a href="2.html">ツインターボ<br></a></li>
+ <li><a href="3.html">サクラバクシンオー</a></li>
 </ol>
 <style> ol {
   color: skyblue;
 }
 </style>
-<h2 style="color:Green;">HTML</h2>
+<h2 style="color:grey;">オグリキャップ</h2>
 <p>
-  <a href="https://www.w3.org/TR/html5/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications. Web browsers receibe HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the apperance of the document.
-</p>
-<img src="https://img.chuing.net/i/euJGGNQ/53.gif"width="50%">
-<p style="margin-top:45px;">HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, auotes and other items. HTML elements are delineated by tags, written using angle brackets.
+<img src="https://img.gamewith.jp/article_tools/uma-musume/gacha/ikusei_main_5.png"width="15%" style="float:left;">
+<strong>故郷の人たちのために…まずは腹ごしらえだ</strong><br><br> 
+CV:高柳知葉<br>
+オグリキャップとは、『ウマ娘 プリティーダービー』の登場キャラクターである。
+<br>
+実在した競走馬、オグリキャップ号をモチーフとするウマ娘である。
+<br>
+<br>
+地元カサマツレース場でのローカル・シリーズで圧倒的な実力を発揮し、地元の皆の応援を受けてトレセン学園にやってきたマイペースで純朴な少女。<br>
+ウマ娘のエネルギー消費の関係で大食いの多いトレセン学園でも随一の健啖家で、一瞬で米びつも鍋も空にする。<br>
+田舎生まれで建造物の立ち並び人通りも多い場所に慣れていない事や、ド天然な性格もあり、街中や学園内では度々迷子になってしまっている。<br>
+周囲から指摘されない限り、本人は「都会は同じような見た目の場所が多い」とか「相手の方が迷子になった」などと思いながらあらぬ方向にスタスタ歩いているので始末に終えない。<br>
+ただし根っからの方向音痴という訳ではなく、地元に近いような自然に囲まれた場所の地理を覚えるのはむしろ非常に得意であり、そういった場所のガイドには打って付け。<br>
+そんな素直な彼女だからこそ、周りから支えられ愛されている。本人もレースで感謝の意を示したいと気合十分である。時折恥ずかしがり屋な一面を見せることも。<br>
+一見大人しく、周りからたまに怖そうという印象を持たれることはあるが本質は上記の通りで、時折先輩らしく頼られる描写もある。
 </p>
 </body>
 </html>
