--- a/3.html
+++ b/3.html
@@ -2,28 +2,40 @@
 <html>
 <meta charset="utf-8">
 <head>
-<title>WEB1 - JavaScript</title>
+<title>サクラバクシンオー</title>
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">
+  <img src="https://spice.eplus.jp/images/i6tVDWthnvtT3TLscqUVdUk7nB0cMENefD9rYSXgjiUOMVFGh4J9O6NkP2iumCsg/"width="180">
+  </a></h1>
 <ol>
- <li><a href="1.html">HTML<br></a></li>
- <li><a href="2.html">CSS<br></a></li>
- <li><a href="3.html">JavaScript</a></li>
+ <li><a href="1.html">オグリキャップ<br></a></li>
+ <li><a href="2.html">ツインターボ<br></a></li>
+ <li><a href="3.html">サクラバクシンオー</a></li>
 </ol>
 <style> ol {
   color: skyblue;
 }
 </style>
-<h2 style="color:pink;">JavaScript</h2>
+<h2 style="color:pink;">サクラバクシンオー</h2>
 <p>
-JavaScript often abbreviated as JS, is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.
+<img src="https://img.gamewith.jp/article_tools/uma-musume/gacha/ikusei_main_21.png"width="15%" style="float:right;">
+<strong>1にバクシン！2にバクシン!!、バクシーーーーンッ!!</strong><br><br>
+CV:三澤紗千香<br>
+サクラバクシンオーとは、『ウマ娘 プリティーダービー』の登場キャラクターである。
 <br>
-Alongside HTML and CSS, JavaScript is one of the core technologies of the World Wide Web. Over 97% of websites use it client-side for web page behavior, often incorporating third-party libraries. Most web browsers have a dedicated JavaScript engine to execute the code on the user's device.
-</p>
-<img src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Javascript_badge.svg"width="40%">
-<p style="margin-top:45px;">
-As a multi-paradigm language, JavaScript supports event-driven, functional, and imperative programming styles. It has application programming interfaces (APIs) for working with text, dates, regular expressions, standard data structures, and the Document Object Model (DOM).
-</p>
+実在した競走馬、サクラバクシンオー号をモチーフとするウマ娘である。
+<br>
+<br>
+一度走り出すと止まらない大爆走っぷりを発揮する天然ウマ娘。<br>
+かなりせっかちな性格で、考えたことはすぐに実行するタイプ。<br>
+しばしば周りを巻き込んで大失敗をするが、本人にはまったく自覚がないらしい。<br>
+自分のクラスの学級委員長をやっている。<br>
+<a href="https://umamusume.jp/character/detail/?name=sakurabakushino" target="_blank" title="キャラクター一覧 | ウマ娘 プリティーダービー 公式ポータルサイト｜Cygames">公式ポータルサイトumamusume.jp</a>より<br></p>
+<p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/v5Spa0tMpNA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="float:left;"></iframe>
+「バクシーン！」が口癖の走り出すと止まらない大爆走ウマ娘。「学級委員長」であることに自負と誇りを抱き、誰に頼まれずとも模範生として学内の見回りに奔走している。品行方正で押しが強く、声量も仕草も基本的にうるさい。後述の通り暴走してて危なっかしいため自ずとよく気遣われており、ゴルシとは違うベクトルで周りを振り回してしまうタイプ。<br>
+両親からは褒めに褒められて育ったらしく、自己肯定感と根拠のない自信で溢れ返っており、しばしば謎理論を展開して自身の才覚を主張しトレーナーを困惑させる。とにかくポジティブで元気いっぱいなので、プレイヤーの間では「バクシンオーを見てると元気が出てくる」と専らの評判。<br>
+いい子であることには違いないが。<br>
 </body>
 </html>
